--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -129,7 +129,7 @@
     font-style: normal;
 }
 
-/*@font-face {
+@font-face {
     font-family: 'fira_sanslight_italic';
     src: url('../fonts/firasans-lightitalic.eot');
     src: url('../fonts/firasans-lightitalic.eot?#iefix') format('embedded-opentype'),
@@ -138,7 +138,7 @@
     font-weight: normal;
     font-style: normal;
 }
-*/
+
 @font-face {
     font-family: 'fira_sansbook';
     src: url('../fonts/firasans-book.eot');
