--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,5 @@
 @import url('fonts.css');
 @import url('style.css');
 @import url('index.css');
+@import url('portfolio.css');
 @import url('responsive.css');
