--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,4 +2,5 @@
 @import url('style.css');
 @import url('index.css');
 @import url('portfolio.css');
+@import url('contact.css');
 @import url('responsive.css');
