--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,4 +3,5 @@
 @import url('index.css');
 @import url('portfolio.css');
 @import url('contact.css');
+@import url('auth.css');
 @import url('responsive.css');
