add buttons states

--- a/app/css/contact.css
+++ b/app/css/contact.css
@@ -115,10 +115,19 @@
 	resize: none;
 	outline: none;
 	border-bottom: 2px solid #3ba8c0;
+	border-top: 2px solid #48cbe8;
 	background-color: #48cbe8;
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
 			border-radius: 4px;
+}
+
+.contact-form__submit:hover {
+	border-bottom-color: #48cbe8;
+}
+
+.contact-form__submit:active {
+	border-top-color: #3ba8c0;
 }
 
 .contact-form_submit {
@@ -144,10 +153,19 @@
 	resize: none;
 	outline: none;
 	border-bottom: 2px solid #687b8f;
+	border-top: 2px solid #849db5;
 	background-color: #849db5;
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
 			border-radius: 4px;
+}
+
+.contact-form__reset:hover {
+	border-bottom-color: #849db5;
+}
+
+.contact-form__reset:active {
+	border-top-color: #687b8f;
 }
 
 .contact-form_reset {
