--- a/app/css/portfolio.css
+++ b/app/css/portfolio.css
@@ -11,7 +11,7 @@
 	display: inline-block;
 	vertical-align: top;
 	width: 183px;
-	height: 215px;
+	/*height: 215px;*/
 	overflow: hidden;
 	text-align: center;
 }
@@ -86,16 +86,16 @@
 	display: block;
 	display: -webkit-box;
 	width: 100%;
-	height: 39px;
+	/*height: 39px;*/
 	margin-top: 6px;
 	font-family: 'fira_sanslight';
 	font-size: 15px;
 	line-height: 1.3;
 	color: #4a545d;
-	-webkit-line-clamp: 2;
+	/*-webkit-line-clamp: 2;
   	-webkit-box-orient: vertical;
 	overflow: hidden;
-	text-overflow: ellipsis;
+	text-overflow: ellipsis;*/
 }
 
 .portfolio__preview:hover .portfolio__overlay {
