--- a/app/css/style.css
+++ b/app/css/style.css
@@ -203,8 +203,8 @@ h6 {
 .social__link {
 	position: relative;
 	display: block;
-	width: 100%;
-	height: 100%;
+	width: 47px;
+	height: 47px;
 	background-repeat: no-repeat;
 	background-position: -1px -1px;
 	background-image: url(../images/social@1x.png);
